@@ -26,10 +26,19 @@ public class RevisionUpdate {
 
   private final String instanceName;
   private final List<SVNLogEntry> logEntries;
+  private boolean flushAfterUpdate;
 
-  public RevisionUpdate(final String instanceName, final List<SVNLogEntry> logEntries) {
+  /**
+   * Constructor.
+   *
+   * @param instanceName     Instance name
+   * @param logEntries       The new log entries
+   * @param flushAfterUpdate If <tt>true</tt>, caches will be flushed after update.
+   */
+  public RevisionUpdate(final String instanceName, final List<SVNLogEntry> logEntries, final boolean flushAfterUpdate) {
     this.instanceName = instanceName;
     this.logEntries = logEntries;
+    this.flushAfterUpdate = flushAfterUpdate;
   }
 
   /**
@@ -48,6 +57,15 @@ public class RevisionUpdate {
    */
   public String getInstanceName() {
     return instanceName;
+  }
+
+  /**
+   * Gets the flush-after-update status.
+   *
+   * @return If <tt>true</tt>, caches must be flushed after update.
+   */
+  public boolean isFlushAfterUpdate() {
+    return flushAfterUpdate;
   }
 
 }
